customer_employee_management

--- a/LapTrinhWeb/Views/Shared/_Layout.cshtml
+++ b/LapTrinhWeb/Views/Shared/_Layout.cshtml
@@ -31,11 +31,6 @@
                 <a href="#">Giới thiệu</a>
                 <a href="#">Liên hệ</a>
             </nav>
-
-            <form class="search-box" action="#" method="get">
-                <input type="text" name="q" placeholder="Tìm sản phẩm..." aria-label="Tìm kiếm" />
-                <button type="submit">Tìm</button>
-            </form>
             <div class="navbar-nav ml-auto py-0">
                 <a href="#" class="nav-item nav-link">Đăng nhập</a>
             </div>
@@ -51,8 +46,9 @@
             <ul class="category-list">
                 <li><a href="#">DashBoard</a></li>
                 <li><a href="#">Quản lý Khách hàng</a></li>
+                <li><a href="#">Quản lý nhân viên</a></li>
                 <li><a href="#">Quản lý đơn hàng</a></li>
-                <li><a href="#">Quản lý Quản lý sản phẩm</a></li>
+                <li><a href="#">Quản lý sản phẩm</a></li>
                 <li><a href="#">Quản lý mã giảm giá</a></li>
                 <li><a href="#">Cài đặt</a></li>
             </ul>
